<resources>
    <string name="app_name">BabyMonitor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty">Empty</string>
    <string name="title_activity_listener">ListenerActivity</string>

    <!--Main Activity View Names-->
    <string name="sensor_button">BABY MONITOR</string>
    <string name="listener_button">BABY LISTENER</string>

    <!--Sensor Activity View Names-->
    <string name="create_group_button">START BABY MONITOR SERVICE</string>
    <string name="start_sensor_service_button">START LISTENING FOR LISTENERS</string>
    <string name="discovered_peers_textview">Discovered Sensors:</string>
    <string name="record_audio_permission_alert">Please accept the permission to run!</string>

    <!--Listener Activity View Names-->
    <string name="discover_service_button">DISCOVER BABY MONITORS</string>
    <string name="start_listener_service_button">START CONNECTION TO SENSOR</string>
    <string name="start_receive_streaming_button">LISTEN</string>
    <string name="stop_receiver_streaming_button">PAUSE</string>
    <string name="connected_peers_textview">Connected Listener:</string>

    <!--Listener & Sensor Activities Common View Names-->
    <string name="my_device_textview">My Device Info:</string>
    <string name="disconnect_button">CLOSE</string>
    <string name="disconnect_device_button">DISCONNECT</string>
    <string name="my_device_name_textview">Name:\t </string>
    <string name="my_device_address_textview">Address:\t </string>
    <string name="my_device_status_textview">Status:\t </string>

    <!--Device List Row View Names-->
    <string name="connect_button">CONNECT</string>

</resources>
