<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.angelo.babymonitor.ListenerActivity">

    <Button
        android:id="@+id/discoverServicesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_service_button"
        android:gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/myDeviceBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/my_device_textview"
                android:textSize="22dp"
                android:visibility="gone"/>
            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_button"
                android:clickable="false"
                android:focusable="false"
                android:visibility="gone"/>

            <Button
                android:id="@+id/disconnectDevicesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_device_button"
                android:clickable="false"
                android:focusable="false"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/myDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/empty"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/myDeviceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/empty"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/myDeviceStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/empty"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/startClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_listener_service_button"
        android:gravity="center"
        android:visibility="gone"/>


    <Button
        android:id="@+id/startReceiveStream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_receive_streaming_button"
        android:gravity="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/stopReceiveStream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_receiver_streaming_button"
        android:gravity="center"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/peersBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/discovered_peers_textview"
        android:textSize="22dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/discoveredDeviceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>

